docs/devops/kubernetes/Kubernetes-Ingress/Application/application/k8s/manifests/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis    
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
